Changes the buttons link of development file

--- a/WebContent/Development-info.html
+++ b/WebContent/Development-info.html
@@ -128,8 +128,8 @@
         </div>
     </div>
     <div class="buttons">
-        <a href="javascript:history.back()"><i class="fas fa-arrow-left"></i> Back</a>
-        <a href="/home"><i class="fas fa-home"></i> Home</a>
+        <a href="Contect.html"><i class="fas fa-arrow-left"></i> Back</a>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
     </div>
     <script>
         let slideIndex = 0;
